# vcom

./: README.md  README_cn.md
.github/workflows/: release.yaml
example/: driver_vcom.c  driver_vcom.h
interface/: driver_vcom_conf.h  driver_vcom_interface.h  driver_vcom_interface_template.c
project/esp32c3/: .gitignore  CMakeLists.txt  README.md  sdkconfig
project/esp32c3/components/vcom/: CMakeLists.txt  vcom.c  vcom.h  vcom_conf.h  vcom_interface.c  vcom_interface.h
project/esp32c3/main/: CMakeLists.txt  main.c
project/stm32f103/: .clang-format  .clangd  .editorconfig  .mxproject  CMakeLists.txt  README.md  STM32F103C8Tx_FLASH.ld  build.sh  download.sh  vcom-stm32f1.ioc  vcom2-stm32f1.ioc
project/stm32f103/Core/Inc/: main.h
project/stm32f103/Core/Src/: gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
project/stm32f103/Drivers/vcom/: CMakeLists.txt
project/stm32f103/Drivers/vcom/inc/: vcom.h  vcom_conf.h  vcom_interface.h
project/stm32f103/Drivers/vcom/src/: vcom.c  vcom_interface.c
project/stm32f103/device/: openocd.cfg
src/: vcom.c  vcom.h
test/: vcom_gpio_toggle_test.c  vcom_timer_irq_feasible_test.c  vcom_tty_echo_test.c
